# ornithological_potential

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  index.html  pyproject.toml
data/interim/: data_inat.csv  grilla_tdf_vacia.gpkg  interactive_map.html  species_grid.gpkg
data/processed/: grilla_riqueza.gpkg  grilla_tdf_clusters.gpkg  grilla_tdf_spp.csv  richness_grid.gpkg
data/raw/: contorno_tdf.gpkg  data_inat.csv  empty_local_grid.gpkg  grilla_tdf_vacia.gpkg
data/raw/data_ebird/: recommended_citation.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-preprocesamiento.ipynb  01a-conversion_inat.ipynb  01b-conversion_ebird.ipynb  02-preparacion_df.ipynb  03-main.ipynb  03-postprocesamiento.ipynb  04-postprocesamiento.ipynb  Main.ipynb  main.ipynb
potencial_ornitologico_fueguino/: __init__.py  dataset.py  features.py  plots.py
potencial_ornitologico_fueguino/modeling/: predict.py  train.py
reports/figures/: interactive_map.html  mapa_interactivo.html
src/: asociar_grilla.py  etl_ebird.py  etl_inat.py  export_interactive_map.py  grid_association.py  grid_generation.py  grillado.py  merge_sources.py  postprocess_grid.py  postprocess_map.py  utils.py
src/aux_ornitho_modules/: etl_ebird.py  etl_inat.py  export_interactive_map.py  grid_generation.py  merge_sources.py
src/modulos/: p1_grillado.py
src/ornithological_potential/: etl_ebird.py  etl_inat.py  export_interactive_map.py  grid_association.py  grid_generation.py  merge_sources.py  postprocess_grid.py  utils.py
