[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "potencial_ornitologico_fueguino"
version = "0.0.1"
description = "Clasificaci\u00f3n de puntos de un raster de la provincia de Tierra del Fuego, Argentina en base a su potencial para observaci\u00f3n de aves seg\u00fan registros historicos d eobservacion"
authors = [
  { name = "Pablo Jusim" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["potencial_ornitologico_fueguino"]
include = ["pyproject.toml", "potencial_ornitologico_fueguino/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["potencial_ornitologico_fueguino"]
force-sort-within-sections = true

